Improve Javadoc Add unittests